--- a/css/styles.css
+++ b/css/styles.css
@@ -7,16 +7,78 @@
 	--primary-contact-color: #757575;
 	--top-main-bck: #2f303a;
 	--bottom-main-bck: #f5f4fa;
+	--border-header-color: #ececec;
+	--border-service-color: #eeeeee;
 	--footer-contact-color: rgba(255, 255, 255, 0.6);
+}
+
+html {
+	box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
+
+h1, h2, h3, h4, h5, h6, p, ul {
+	margin: 0;
+	padding: 0;
+	border: 0;
 }
 body {
 	font-family: "Roboto", sans-serif;
+	margin: 0;
 	color: var(--primary-text-color);
 	background-color: var(--menu-bck);
 }
 
+.container {
+	width: 1200px;
+	margin-left: 215px;
+	margin-right: auto;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.section {
+	padding-top: 94px;
+	padding-bottom: 94px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.what-we-do {
+	margin-top: 94px;
+}
+
 .menu-top {
+	display: flex;
+	align-items: center;
+	border-bottom: 10px var(--border-header-color);
 	background: var(--menu-bck);
+}
+
+.logo-header {
+	display: flex;
+	margin-left: 215px;
+}
+
+.logo-footer {
+	padding-top: 60px;
+	margin-bottom: 20px;
 }
 
 .logo-studio {
@@ -33,13 +95,24 @@ body {
 	color: var(--accent-color);
 }
 
+.menu-top-center {
+	display: flex;
+	margin-left: 93px;
+	padding-top: 32px;
+	padding-bottom: 32px;
+}
+
+.menu-top-center .menu-item {
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.02em;
+	color: var(--primary-text-color);
+}
 .menu-top-center a {
 	color: var(--primary-text-color);
 	text-decoration: none;
-}
-
-.menu-top-center li {
-	list-style-type: none;
 }
 
 .menu-top-center a:hover,
@@ -47,6 +120,28 @@ body {
 	color: var(--accent-color);
 }
 
+.menu-top-center .item {
+	display: block;
+	margin-right: 50px;
+	list-style-type: none;
+}
+
+.menu-top-center .item:last-child {
+	margin-right: 0;
+}
+
+.menu-top-center .menu-item.current {
+	color: var(--accent-color);	
+}
+
+.contacts {
+	display: flex;
+	margin-left: 331px;
+}
+
+.contacts li + li {
+	margin-left: 50px;
+}
 .contacts a {
 	font-style: normal;
 	font-weight: 500;
@@ -65,26 +160,32 @@ body {
 	color: var(--accent-color);
 }
 
-.menu-top-center .menu-item.current {
-	color: var(--accent-color);	
-}
 
 .top-main {
+	text-align: center;
 	background-color: var(--top-main-bck);
 }
 
 .top-main-text {
+	margin: 0 auto 30px auto;
+	padding-top: 200px;
+	width: 696px;
 	font-style: normal;
 	font-weight: 900;
 	font-size: 44px;
 	line-height: 1.36;
-	text-align: center;
 	letter-spacing: 0.06em;
 	text-transform: uppercase;
 	color: var(--menu-bck);
 }
 
 .top-main-button {
+	display: flex;
+	align-items: center;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px 32px;
 	background: var(--accent-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
@@ -92,9 +193,6 @@ body {
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.88;
-	display: flex;
-	align-items: center;
-	text-align: center;
 	letter-spacing: 0.06em;
 	color: var(--menu-bck);
 	cursor: pointer;
@@ -105,6 +203,7 @@ body {
 }
 
 .middle-main-list h3 {
+	margin-bottom: 10px;
 	font-style: normal;
 	font-weight: 700;
 	font-size: 14px;
@@ -115,6 +214,7 @@ body {
 }
 
 .middle-main-list p {
+	margin-top: 0;
 	font-style: normal;
 	font-weight: 400;
 	font-size: 14px;
@@ -124,14 +224,24 @@ body {
 }
 
 .middle-main-list {
+	display: flex;
 	list-style-type: none;
+}
+.middle-main-item {
+	width: 270px;
+}
+
+.middle-main-list li + li {
+	margin-left: 30px;
 }
 
 .menu-item-name {
+	margin-bottom: 50px;
 	font-style: normal;
 	font-weight: 700;
 	font-size: 36px;
 	line-height: 1.17;
+	text-align: center;
 	letter-spacing: 0.03em;
 	color: var(--primary-text-color);
 }
@@ -140,9 +250,15 @@ body {
 	background: var(--bottom-main-bck);
 }
 
+.bottom-main-list img {
+	margin-bottom: 30px;
+}
+
 .bottom-main-list h3 {
+	margin-bottom: 10px;
 	font-style: normal;
 	font-weight: 500;
+	text-align: center;
 	font-size: 16px;
 	line-height: 1.19;
 	letter-spacing: 0.03em;
@@ -152,6 +268,7 @@ body {
 .bottom-main-list p {
 	font-style: normal;
 	font-weight: 400;
+	text-align: center;
 	font-size: 16px;
 	line-height: 1.19;
 	letter-spacing: 0.03em;
@@ -159,13 +276,31 @@ body {
 }
 
 .bottom-main-list {
+	display: flex;
 	list-style-type: none;
 }
 
+.bottom-main-list li + li {
+	margin-left: 30px;
+}
+
+.photo {
+	background-color: var(--bottom-main-bck);
+	border-radius: 0px 0px 4px 4px;
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.profession {
+	margin-bottom: 30px;
+}
+
 .menu-footer {
+	padding-bottom: 60px;
 	background-color: var(--top-main-bck);
 }
+
 .footer-address {
+	margin-left: 215px;
 	font-style: normal;
 	font-weight: 400;
 	font-size: 14px;
@@ -173,6 +308,7 @@ body {
 	letter-spacing: 0.03em;
 	color: var(--menu-bck);
 }
+
 .logo-studio-footer {
 	font-family: "Raleway";
 	font-style: normal;
@@ -183,6 +319,11 @@ body {
 	color: var(--menu-bck);
 	text-decoration: none;
 }
+
+.contacts-footer {
+	margin-left: 215px;
+}
+
 .contacts-footer a {
 	font-style: normal;
 	font-weight: 400;
@@ -194,6 +335,7 @@ body {
 }
 
 .contacts-footer li {
+	margin-top: 9px;
 	list-style-type: none;
 }
 
@@ -223,7 +365,22 @@ body {
 }
 
 .filter-portfolio {
+	display: flex;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 34px;
 	list-style-type: none;
+}
+.button-item {
+	text-align: center;
+	letter-spacing: 0.03em;
+}
+
+.button-portfolio {
+	padding: 8px 22px;
+	margin-right: 8px;
+	border-radius: 4px;
+	border-style: hidden;
 }
 
 .menu-portfolio h2 {
@@ -245,5 +402,37 @@ body {
 }
 
 .menu-portfolio {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 	list-style-type: none;
+}
+
+.service-item {
+	margin-right: 30px;
+	margin-bottom: 30px;
+	border: 1px var(--border-service-color)
+}
+
+.service-item:nth-child(3n) {
+	margin-right: 0;
+}
+
+.service-item:nth-last-child(-n + 3) {
+	margin-bottom: 0;
+}
+
+.service-item-text {
+	margin: 20px 24px;
+}
+
+.service-item-text h2 {
+	text-align: left;
+	margin: 0;
+	padding: 0;
+}
+
+.service-item-text p {
+	margin: 0;
+	padding: 0;
 }
