--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
 	--border-header-color: #ececec;
 	--border-service-color: #eeeeee;
 	--footer-contact-color: rgba(255, 255, 255, 0.6);
+	--items-between: 30px;
 }
 
 html {
@@ -22,21 +23,48 @@ html {
 	box-sizing: inherit;
 }
 
-h1, h2, h3, h4, h5, h6, p, ul {
+h1, h2, h3, h4, h5, h6, p {
 	margin: 0;
 	padding: 0;
 	border: 0;
 }
+
 body {
-	font-family: "Roboto", sans-serif;
-	margin: 0;
+	font-family: Roboto, sans-serif;
 	color: var(--primary-text-color);
 	background-color: var(--menu-bck);
+	letter-spacing: 0.03em;
+}
+
+img {
+	display: block;
+}
+
+h2 {
+  color: var(--primary-text-color);
+}
+
+a {
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu-top {
+  align-items: center;
+  background-color: var(--menu-bck);
+  border-bottom: 1px solid var(--border-header-color);
 }
 
 .container {
 	width: 1200px;
-	margin-left: 215px;
+	margin-left: auto;
 	margin-right: auto;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -45,6 +73,13 @@ body {
 .section {
 	padding-top: 94px;
 	padding-bottom: 94px;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .visually-hidden {
@@ -60,8 +95,9 @@ body {
   overflow: hidden;
 }
 
-.what-we-do {
-	margin-top: 94px;
+.nav {
+  display: flex;
+  align-items: center;
 }
 
 .menu-top {
@@ -71,63 +107,39 @@ body {
 	background: var(--menu-bck);
 }
 
-.logo-header {
+.logo-web-header {
 	display: flex;
-	margin-left: 215px;
-}
-
-.logo-footer {
-	padding-top: 60px;
-	margin-bottom: 20px;
-}
-
-.logo-studio {
-	font-family: "Raleway";
-	font-style: normal;
+	margin-right: 93px;
+	font-family: Raleway;
 	font-weight: 700;
 	font-size: 26px;
 	line-height: 1.19;
-	color: var(--logo-text-color);
-	text-decoration: none;
+	color: var(--accent-color);	
 }
 
-.logo-web {
-	color: var(--accent-color);
+.logo-studio-header {
+	color: var(--primary-text-color);
 }
 
 .menu-top-center {
 	display: flex;
-	margin-left: 93px;
-	padding-top: 32px;
-	padding-bottom: 32px;
+}
+
+.menu-top-center .item + .item {
+	margin-left: 50px;
 }
 
 .menu-top-center .menu-item {
-	font-style: normal;
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.14;
 	letter-spacing: 0.02em;
 	color: var(--primary-text-color);
 }
-.menu-top-center a {
-	color: var(--primary-text-color);
-	text-decoration: none;
-}
 
 .menu-top-center a:hover,
 .menu-top-center a:focus {
 	color: var(--accent-color);
-}
-
-.menu-top-center .item {
-	display: block;
-	margin-right: 50px;
-	list-style-type: none;
-}
-
-.menu-top-center .item:last-child {
-	margin-right: 0;
 }
 
 .menu-top-center .menu-item.current {
@@ -136,23 +148,19 @@ body {
 
 .contacts {
 	display: flex;
-	margin-left: 331px;
+	margin-left: auto;
 }
 
-.contacts li + li {
+.contacts .item + .item {
 	margin-left: 50px;
 }
+
 .contacts a {
-	font-style: normal;
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.14px;
+	letter-spacing: 0.02em;
 	color: var(--primary-contact-color);
-	text-decoration: none;
-}
-
-.contacts li {
-	list-style-type: none;
 }
 
 .contacts a:hover,
@@ -160,36 +168,35 @@ body {
 	color: var(--accent-color);
 }
 
-
 .top-main {
+	padding-top: 200px;
+	padding-bottom: 200px;
 	text-align: center;
 	background-color: var(--top-main-bck);
 }
 
 .top-main-text {
-	margin: 0 auto 30px auto;
-	padding-top: 200px;
 	width: 696px;
-	font-style: normal;
+	margin: 0 auto;
 	font-weight: 900;
 	font-size: 44px;
 	line-height: 1.36;
 	letter-spacing: 0.06em;
+	text-align: center;
 	text-transform: uppercase;
 	color: var(--menu-bck);
 }
 
 .top-main-button {
-	display: flex;
 	align-items: center;
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 30px;
 	padding: 10px 32px;
 	background: var(--accent-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
-	font-style: normal;
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.88;
@@ -199,12 +206,22 @@ body {
 }
 
 .middle-main {
+	padding-top: 94px;
 	background: var(--menu-bck);
 }
 
+.middle-main p {
+	font-size: 14px;
+	line-height: 1.71;
+}
+
+.middle-main-list {
+	display: flex;
+	justify-content: center;
+}
+
 .middle-main-list h3 {
-	margin-bottom: 10px;
-	font-style: normal;
+  	margin-bottom: 10px;
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 1.14;
@@ -213,226 +230,207 @@ body {
 	color: var(--primary-text-color);
 }
 
+.middle-main-list .item {
+  width: 270px;
+}
+
 .middle-main-list p {
-	margin-top: 0;
-	font-style: normal;
-	font-weight: 400;
 	font-size: 14px;
-	line-height: 1.71;
-	letter-spacing: 0.03em;
-	color: var(--primary-contact-color);
+	line-height: 1.71;	
 }
 
-.middle-main-list {
-	display: flex;
-	list-style-type: none;
-}
-.middle-main-item {
-	width: 270px;
-}
-
-.middle-main-list li + li {
+.middle-main-list .item + .item {
 	margin-left: 30px;
 }
 
-.menu-item-name {
-	margin-bottom: 50px;
-	font-style: normal;
+.middle-img h2 {
 	font-weight: 700;
 	font-size: 36px;
-	line-height: 1.17;
+	line-height: 1.16;
 	text-align: center;
-	letter-spacing: 0.03em;
-	color: var(--primary-text-color);
+}
+
+.middle-img {
+	text-align: center;
+	padding-top: 94px;
+	padding-bottom: 94px;
+}
+
+.middle-img .item + .item {
+	margin-left: 30px;
+}
+
+.middle-main-title {
+	display: flex;
+	margin-top: 50px;
+	justify-content: center;
 }
 
 .bottom-main {
-	background: var(--bottom-main-bck);
+  background-color: var(--bottom-main-bck);
 }
 
-.bottom-main-list img {
-	margin-bottom: 30px;
+.team-title {
+	margin: 0;
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 1.16;
+	text-align: center;
+	color: var(--primary-text-color);
 }
 
-.bottom-main-list h3 {
-	margin-bottom: 10px;
-	font-style: normal;
+.bottom-main .item {
+  background: var(--menu-bck);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.bottom-main .item + .item {
+  margin-left: 30px;
+}
+
+.team-list {
+	display: flex;
+	justify-content: center;
+	margin-top: 50px;
 	font-weight: 500;
-	text-align: center;
 	font-size: 16px;
-	line-height: 1.19;
-	letter-spacing: 0.03em;
-	color: var (--primary-text-color);
+	line-height: 1.18;
+	text-align: center;
+	color: var(--primary-text-color);
 }
 
-.bottom-main-list p {
-	font-style: normal;
+.bottom-main h3 {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.bottom-main p {
+	margin-top: 10px; 
 	font-weight: 400;
-	text-align: center;
 	font-size: 16px;
-	line-height: 1.19;
-	letter-spacing: 0.03em;
+	line-height: 1.18;
 	color: var(--primary-contact-color);
 }
 
-.bottom-main-list {
-	display: flex;
-	list-style-type: none;
-}
-
-.bottom-main-list li + li {
-	margin-left: 30px;
-}
-
-.photo {
-	background-color: var(--bottom-main-bck);
-	border-radius: 0px 0px 4px 4px;
-	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-
-.profession {
-	margin-bottom: 30px;
+.item-text {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .menu-footer {
+	padding-top: 60px;
 	padding-bottom: 60px;
 	background-color: var(--top-main-bck);
 }
 
-.footer-address {
-	margin-left: 215px;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 1.71;
-	letter-spacing: 0.03em;
-	color: var(--menu-bck);
-}
-
-.logo-studio-footer {
-	font-family: "Raleway";
-	font-style: normal;
+.logo-web-footer {
+	display: block;
+	font-family: Raleway, sans-serif;
 	font-weight: 700;
 	font-size: 26px;
 	line-height: 1.19;
-	letter-spacing: 0.03em;
-	color: var(--menu-bck);
-	text-decoration: none;
-}
-
-.contacts-footer {
-	margin-left: 215px;
-}
-
-.contacts-footer a {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 1.71;
-	letter-spacing: 0.03em;
-	color: var(--footer-contact-color);
-	text-decoration: none;
-}
-
-.contacts-footer li {
-	margin-top: 9px;
-	list-style-type: none;
-}
-
-.contacts-footer a:hover,
-.contacts-footer a:focus {
 	color: var(--accent-color);
 }
 
-.filter-portfolio button {
-	font-family: "Roboto";
+.logo-studio-footer {
+	color: var(--menu-bck);
+}
+
+.footer-address {
 	font-style: normal;
+}
+
+.menu-footer a {
+	margin-bottom: 20px;
+}
+
+.menu-footer p {
+	margin-bottom: 9px;
+	font-size: 14px;
+	line-height: 1.7;
+	color: var(--menu-bck);
+}
+
+.menu-footer .item + .item {
+  margin-top: 9px;
+}
+
+.menu-footer .link {
+	font-size: 14px;
+	line-height: 1.7;
+	color: rgba(255, 255, 255, 0.6);
+}
+
+.menu-footer .link:hover,
+.menu-footer .link:focus {
+  color: var(--accent-color);
+}
+
+button {
+	padding: 6px 22px;
+	font-family: Roboto, sans-serif;
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.62;
+	cursor: pointer;
 	text-align: center;
 	letter-spacing: 0.03em;
+	border-radius: 4px;
+	border-color: transparent;
+	background-color: var(--bottom-main-bck);
 	color: var(--primary-text-color);
-	background-color: var(--body-bck);
-	cursor: pointer;
-}
-
-.filter-portfolio button:hover,
-.filter-portfolio button:focus {
-	color: var(--menu-bck);
-	background-color: var(--accent-color);
-	cursor: pointer;
 }
 
 .filter-portfolio {
-	display: flex;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 34px;
-	list-style-type: none;
-}
-.button-item {
-	text-align: center;
-	letter-spacing: 0.03em;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 
-.button-portfolio {
-	padding: 8px 22px;
-	margin-right: 8px;
-	border-radius: 4px;
-	border-style: hidden;
+.filter-portfolio .item + .item {
+  margin-left: 8px;
 }
 
-.menu-portfolio h2 {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 18px;
-	line-height: 2;
-	letter-spacing: 0.06em;
-	color: var(--primary-text-color);
-}
-
-.menu-portfolio p {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 1.88;
-	letter-spacing: 0.03em;
-	color: var(--primary-contact-color);
+button:hover,
+button:focus {
+  color: var(--menu-bck);
+  background-color: var(--accent-color);
 }
 
 .menu-portfolio {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
-	list-style-type: none;
+	justify-content: center;
+	margin-top: calc(-1 * var(--items-between));
+	margin-left: calc(-1 * var(--items-between));
 }
 
-.service-item {
-	margin-right: 30px;
-	margin-bottom: 30px;
-	border: 1px var(--border-service-color)
+.menu-portfolio > .item {
+	flex-basis: calc(100% / 3 - 30px);
+	margin-top: var(--items-between);
+	margin-left: var(--items-between);
+	background: var(--menu-bck);
 }
 
-.service-item:nth-child(3n) {
-	margin-right: 0;
+.menu-portfolio .item-text {
+	padding: 20px 24px;
+	border: 1px solid #eeeeee;
 }
 
-.service-item:nth-last-child(-n + 3) {
-	margin-bottom: 0;
+.menu-portfolio h2 {
+	margin-bottom: 4px;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 2;
+	letter-spacing: 0.06em;
 }
 
-.service-item-text {
-	margin: 20px 24px;
-}
-
-.service-item-text h2 {
-	text-align: left;
-	margin: 0;
-	padding: 0;
-}
-
-.service-item-text p {
-	margin: 0;
-	padding: 0;
+.menu-portfolio p {
+	font-size: 16px;
+	line-height: 1.88;
 }
